// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationFooter /> Default story renders snapshot 1`] = `
<footer
  class="css-1hmufnb eo3g72c0"
>
  <div
    class="css-gtwh7j eo3g72c3"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1jts3e70 css-1d91tk4-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-60a6kw eo3g72c1"
      >
        <div
          style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; white-space: nowrap; width: 64px;"
        >
          Logo Slot
        </div>
        <p>
          Logo Name
        </p>
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary e2h2wz80 css-o6cdn8-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
          >
            Beta
          </span>
        </div>
      </div>
    </a>
    <div
      class="css-18f5akw eo3g72c2"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1y7phrk0 e1jts3e70 css-533l1z-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/1"
        target="_blank"
      >
        Nav Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1y7phrk0 e1jts3e70 css-533l1z-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/2"
        target="_blank"
      >
        Nav Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1y7phrk0 e1jts3e70 css-533l1z-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/3"
        target="_blank"
      >
        Nav Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1y7phrk0 e1jts3e70 css-533l1z-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/4"
        target="_blank"
      >
        Nav Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1y7phrk0 e1jts3e70 css-533l1z-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/5"
        target="_blank"
      >
        Nav Item
      </a>
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth eh4uul01 css-1xlwyff-MuiDivider-root"
  />
  <div
    class="css-yucxhh eo3g72c8"
  >
    <div
      class="css-mtx1ta eo3g72c4"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eh4uul00 e1jts3e70 css-72c95i-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/1"
      >
        Link Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eh4uul00 e1jts3e70 css-72c95i-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/2"
      >
        Link Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eh4uul00 e1jts3e70 css-72c95i-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/3"
      >
        Link Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eh4uul00 e1jts3e70 css-72c95i-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/4"
      >
        Link Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eh4uul00 e1jts3e70 css-g4aypv-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/5"
      >
        Link Item
      </a>
    </div>
    <div
      class="css-1avqj1m eo3g72c6"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1jts3e70 css-1d91tk4-MuiTypography-root-MuiLink-root"
        href="https://example.com/1"
      >
        <div
          style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; white-space: nowrap; width: 64px;"
        >
          Image Slot
        </div>
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1jts3e70 css-1d91tk4-MuiTypography-root-MuiLink-root"
        href="https://example.com/2"
      >
        <div
          style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; white-space: nowrap; width: 64px;"
        >
          Image Slot
        </div>
      </a>
    </div>
  </div>
</footer>
`;

exports[`<NavigationFooter /> matches the snapshot 1`] = `
<DocumentFragment>
  <footer
    class="css-1hmufnb eo3g72c0"
  >
    <div
      class="css-gtwh7j eo3g72c3"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1jts3e70 css-1d91tk4-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-60a6kw eo3g72c1"
        >
          <div
            style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; white-space: nowrap; width: 64px;"
          >
            Logo Slot
          </div>
          <p>
            Logo Name
          </p>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary e2h2wz80 css-o6cdn8-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
            >
              Beta
            </span>
          </div>
        </div>
      </a>
      <div
        class="css-18f5akw eo3g72c2"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1y7phrk0 e1jts3e70 css-533l1z-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/1"
          target="_blank"
        >
          Nav Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1y7phrk0 e1jts3e70 css-533l1z-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/2"
          target="_blank"
        >
          Nav Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1y7phrk0 e1jts3e70 css-533l1z-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/3"
          target="_blank"
        >
          Nav Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1y7phrk0 e1jts3e70 css-533l1z-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/4"
          target="_blank"
        >
          Nav Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1y7phrk0 e1jts3e70 css-533l1z-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/5"
          target="_blank"
        >
          Nav Item
        </a>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth eh4uul01 css-1xlwyff-MuiDivider-root"
    />
    <div
      class="css-yucxhh eo3g72c8"
    >
      <div
        class="css-mtx1ta eo3g72c4"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eh4uul00 e1jts3e70 css-72c95i-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/1"
        >
          Link Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eh4uul00 e1jts3e70 css-72c95i-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/2"
        >
          Link Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eh4uul00 e1jts3e70 css-72c95i-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/3"
        >
          Link Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eh4uul00 e1jts3e70 css-72c95i-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/4"
        >
          Link Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eh4uul00 e1jts3e70 css-g4aypv-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/5"
        >
          Link Item
        </a>
      </div>
      <div
        class="css-1avqj1m eo3g72c6"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1jts3e70 css-1d91tk4-MuiTypography-root-MuiLink-root"
          href="https://example.com/1"
        >
          <div
            style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; white-space: nowrap; width: 64px;"
          >
            Image Slot
          </div>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1jts3e70 css-1d91tk4-MuiTypography-root-MuiLink-root"
          href="https://example.com/2"
        >
          <div
            style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; white-space: nowrap; width: 64px;"
          >
            Image Slot
          </div>
        </a>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
